--- a/LogLinkFixedEff.Rmd
+++ b/LogLinkFixedEff.Rmd
@@ -12,6 +12,7 @@ output: pdf_document
 
 ```{r, packages, message=FALSE, echo=FALSE, warning=FALSE}
 library(knitr) # required to set options in Markdown R
+library(ResourceSelection)
 # library(lme4)
 # library(nlme)
 ```
@@ -177,22 +178,6 @@ summary(fit_log3quasi)
 
 (Dispersion parameter for quasibinomial family taken to be 1.000397)
 
-```{r diagnostics, eval=FALSE, echo=FALSE}
-mydata <- fullAQI_4_14
-z <-  fit_log3
-summary(z)                  # parameter estimates and overall model fit
-plot(z)                     # plots of deviance residuals, q-q, leverage
-coef(z)                     # model coefficients
-resid(z)                    # deviance residuals
-predict(z)                  # predicted values on the transformed scale
-predict(z, se.fit = TRUE)   # Includes SE's of predicted values
-fitted(z)                   # predicted values on the original scale
-
-plot(jitter(residuals(z), amount = 0.05) ~ predict(z))
-
-lines(lowess(x, y), data = mydata)
-```
-
 ### Estimate fit_log4 with **seven** predictors: 
 
 formula4 <- ond ~ pay +age_group +sex +ASA +anes_type +duration +practice
@@ -213,10 +198,62 @@ fit_log4 <- glm(formula4,
 4: step size truncated due to divergence 
 5: glm.fit: algorithm did not converge*
 
+# Diagnostics
+
+```{r diagnostics, eval=FALSE, echo=FALSE}
+mydata <- fullAQI_4_14
+z <-  fit_log3
+summary(z)                  # parameter estimates and overall model fit
+plot(z)                     # plots of deviance residuals, q-q, leverage
+coef(z)                     # model coefficients
+resid(z)                    # deviance residuals
+predict(z)                  # predicted values on the transformed scale
+predict(z, se.fit = TRUE)   # Includes SE's of predicted values
+fitted(z)                   # predicted values on the original scale
+
+plot(jitter(residuals(z), amount = 0.05) ~ predict(z))
+
+lines(lowess(x, y), data = mydata)
+```
+
+## Hosmer-Lemeshow Goodness of Fit
+
+### Function
+```{r, function, eval=TRUE, echo=TRUE}
+# webpage:
+
+(link <- "http://sas-and-r.blogspot.com/2010/09/example-87-hosmer-and-lemeshow-goodness.html")
+
+hosmerlem = function(y, yhat, g=10) {
+  cutyhat = cut(yhat,
+     breaks = quantile(yhat, probs=seq(0,
+       1, 1/g)), include.lowest=TRUE)
+  obs = xtabs(cbind(1 - y, y) ~ cutyhat)
+  expect = xtabs(cbind(1 - yhat, yhat) ~ cutyhat)
+  chisq = sum((obs - expect)^2/expect)
+  P = 1 - pchisq(chisq, g - 2)
+  return(list(chisq=chisq,p.value=P))
+}
+
+# ds = read.csv("http://www.math.smith.edu/r/data/help.csv")
+# attach(ds)
+# logreg = glm(homeless ~ female + i1 + cesd + age + substance,
+#   family=binomial)
+# hosmerlem(y=homeless, yhat=fitted(logreg))
+```
+
+### Results
+
+```{r HosmerLemeshow_log3, echo=TRUE, }
+hoslem.test(fullAQI_4_14$ond, fitted(fit_log3))
+hosmerlem(y=fullAQI_4_14$ond, yhat=fitted(fit_log3))
+```
+
+
 ## Logit Link models
 
 
-### Estimate fit_log0 with **three** predictors: 
+### Estimate fit_logit0 with **three** predictors: 
 
 formula0 <- ond ~ pay +age_group +sex
 
@@ -239,7 +276,7 @@ OR <- exp(coef(fit_logit0)) # exponentiated coefficients
 kable(data.frame(OR, p_values), digits = 3, caption = "Results logit0")
 ```
 
-### Estimate fit_log1 with **four** predictors: 
+### Estimate fit_logit1 with **four** predictors: 
 
 formula1 <- ond ~ pay +age_group +sex +ASA
 
@@ -261,7 +298,7 @@ OR <- exp(coef(fit_logit1)) # exponentiated coefficients
 kable(data.frame(OR, p_values), digits = 3, caption = "Results logit1")
 ```
 
-### Estimate fit_log2 with **five** predictors: 
+### Estimate fit_logit2 with **five** predictors: 
 
 formula2 <- ond ~ pay +age_group +sex +ASA +anes_type 
 
@@ -282,7 +319,7 @@ OR <- exp(coef(fit_logit2)) # exponentiated coefficients
 kable(data.frame(OR, p_values), digits = 3, caption = "Results logit2")
 ```
 
-### Estimate fit_log3 with **six** predictors: 
+### Estimate fit_logit3 with **six** predictors: 
 
 formula3 <- ond ~ pay +age_group +sex +ASA +anes_type +duration
 
@@ -303,7 +340,7 @@ OR <- exp(coef(fit_logit3)) # exponentiated coefficients
 kable(data.frame(OR, p_values), digits = 3, caption = "Results logit3")
 ```
 
-### Estimate fit_log4 with **seven** predictors: 
+### Estimate fit_logit4 with **seven** predictors: 
 
 formula4 <- ond ~ pay +age_group +sex +ASA +anes_type +duration +practice
 
@@ -326,7 +363,7 @@ kable(data.frame(OR, p_values), digits = 3, caption = "Results logit4")
 
 **Convergence**
 
-### Check dispersion for fit_log3
+### Check dispersion for fit_log4
 
 ```{r checkdispersion_logit, echo=TRUE, eval=TRUE}
 fit_logit4quasi <- glm(formula4, 
@@ -339,3 +376,42 @@ summary(fit_logit4quasi)
 ##### Result
 
 Dispersion parameter for quasibinomial family taken to be 1.043756, hence no overdispersion demonstrated.
+
+## Hosmer-Lemeshow Goodness of Fit
+
+### Function
+
+```{r, function2, eval=TRUE, echo=TRUE}
+# webpage:
+
+(link <- "http://sas-and-r.blogspot.com/2010/09/example-87-hosmer-and-lemeshow-goodness.html")
+
+hosmerlem = function(y, yhat, g=10) {
+  cutyhat = cut(yhat,
+     breaks = quantile(yhat, probs=seq(0,
+       1, 1/g)), include.lowest=TRUE)
+  obs = xtabs(cbind(1 - y, y) ~ cutyhat)
+  expect = xtabs(cbind(1 - yhat, yhat) ~ cutyhat)
+  chisq = sum((obs - expect)^2/expect)
+  P = 1 - pchisq(chisq, g - 2)
+  return(list(chisq=chisq,p.value=P))
+}
+
+# ds = read.csv("http://www.math.smith.edu/r/data/help.csv")
+# attach(ds)
+# logreg = glm(homeless ~ female + i1 + cesd + age + substance,
+#   family=binomial)
+# hosmerlem(y=homeless, yhat=fitted(logreg))
+```
+
+###Results
+
+```{r HosmerLemeshow_logit4, echo=TRUE, }
+hoslem.test(fullAQI_4_14$ond, fitted(fit_logit4))
+hosmerlem(y=fullAQI_4_14$ond, yhat=fitted(fit_logit4))
+
+```
+
+##### Inference
+
+Both the **log** link and the **logit** link models fit the data very poorly.
