--- a/Table1.Rmd
+++ b/Table1.Rmd
@@ -1,18 +1,19 @@
 ---
-title: "Table 1 of AQI data"
+title: "Tables of AQI data"
 author: "Michael Andreae"
-date: "July, 24, 2015"
+date: "July, 2015"
 output: pdf_document
 ---
   
 # Insurance status predicts antiemetic use 
 
-  We investigate the Hypothesis that insurance status predicets antiemetic use the population in the Public Use File of the Anestehsia Quality Institute with electronic anesthesia records recording antiemetic use.
+  We investigate the yypothesis that insurance status predicets antiemetic use the population in the Public Use File of the Anestehsia Quality Institute with electronic anesthesia records recording antiemetic use.
 
 
 
 ```{r, packages, message=FALSE, echo=FALSE, warning=FALSE}
 library(knitr) # required to set options in Markdown R
+library(dplyr)
 library(plyr)
 # library(ResourceSelection)
 # library(lme4)
@@ -29,81 +30,349 @@ setwd("C:/Users/Micheal/Dropbox/Professional/AQI/AQI_Analysis")
 # set options
 opts_chunk$set(fig.width=6, fig.height=4, fig.path='Figs/',
                echo=FALSE, warning=FALSE, message=FALSE)
+rm(list = ls())
+showall<-FALSE
 ```
+
+
+```{r load_clean_dataset, echo=showall}
 
 ## Load cleaned dataset *fullAQI_4_14* and *prov1_AQI_4_14*
 
-we load the cleaned larger dataset without and with provider information *fullAQI_4_14.Rdata*, *prov1_AQI_4_14*, which we generated in *import_AQI_14Jul2015.Rmd*   
-  
-  
-```{r, load_clean_dataset, echo=TRUE}
-rm(list = ls())
+# we load the cleaned larger dataset without and with provider information *fullAQI_4_14.Rdata*, *prov1_AQI_4_14*, which we generated in *import_AQI_14Jul2015.Rmd*   
+
 load("Analysis/Data/fullAQI_4_14.Rdata")
 load("Analysis/Data/prov1_AQI_4_14.Rdata")
+```
+
+```{r show_data_structure, eval=showall}
 str(fullAQI_4_14)
 str(prov1_AQI_4_14)
-
 ```
 
-```{r examples_data, echo=FALSE}
-data <- read.table(header=TRUE, text='
- subject sex condition before after change
-       1   F   placebo   10.1   6.9   -3.2
-       2   F   placebo    6.3   4.2   -2.1
-       3   M   aspirin   12.4   6.3   -6.1
-       4   F   placebo    8.1   6.1   -2.0
-       5   M   aspirin   15.2   9.9   -5.3
-       6   F   aspirin   10.9   7.0   -3.9
-       7   F   aspirin   11.6   8.5   -3.1
-       8   M   aspirin    9.5   3.0   -6.5
-       9   F   placebo   11.5   9.0   -2.5
-      10   M   placebo   11.9  11.0   -0.9
-      11   F   aspirin   11.4   8.0   -3.4
-      12   M   aspirin   10.0   4.4   -5.6
-      13   M   aspirin   12.5   5.4   -7.1
-      14   M   placebo   10.6  10.6    0.0
-      15   M   aspirin    9.1   4.3   -4.8
-      16   F   placebo   12.1  10.2   -1.9
-      17   F   placebo   11.0   8.8   -2.2
-      18   F   placebo   11.9  10.2   -1.7
-      19   M   aspirin    9.1   3.6   -5.5
-      20   M   placebo   13.5  12.4   -1.1
-      21   M   aspirin   12.0   7.5   -4.5
-      22   F   placebo    9.1   7.6   -1.5
-      23   M   placebo    9.9   8.0   -1.9
-      24   F   placebo    7.6   5.2   -2.4
-      25   F   placebo   11.8   9.7   -2.1
-      26   F   placebo   11.8  10.7   -1.1
-      27   F   aspirin   10.1   7.9   -2.2
-      28   M   aspirin   11.6   8.3   -3.3
-      29   F   aspirin   11.3   6.8   -4.5
-      30   F   placebo   10.3   8.3   -2.0
- ')
+
+```{r reorder_level_age_group, echo=showall, results='hide'}
+## Reorder age_group for tables
+
+levels(fullAQI_4_14$age_group)
+fullAQI_4_14$age_group <- factor(fullAQI_4_14$age_group, 
+                                 levels =  c("Under 1",
+                                             "1-18",
+                                             "19 - 49", 
+                                             "50 - 64", 
+                                             "65 - 79",
+                                             "80+"
+                                              ))
+levels(fullAQI_4_14$age_group)
 ```
 
-```{r example_caculations, echo=TRUE}
+# Table 1
 
-library(plyr)
-
-# Run the functions length, mean, and sd on the value of "change" for each group, 
-# broken down by sex + condition
-cdata <- ddply(data, c("sex", "condition"), summarise,
-               N    = length(change),
-               mean = mean(change),
-               sd   = sd(change),
-               se   = sd / sqrt(N)
-)
-kable(cdata)
+## Table of gender
+```{r table1_gender}
+table1.2 <- ddply(fullAQI_4_14, 
+                    c("sex"), summarise,
+                    N = length(ond),
+                    Percent_n= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+kable(table1.2, col.names = c("Gender",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron"), 
+      digits = 2)
 ```
 
-```{r counts_per_strata}
-ls()
-attach(fullAQI_4_14)
-table2 <- ddply(fullAQI_4_14, c("anes_type", "sex", "pay"), summarise,
-                N = length(ond)
-                #Percent    = length(ond)/sum(ond=="Ondan")
-               )
-kable(table2)
-#LOR <- log(rt/(nt-rt) - log(rc/(nc-rc)
+## Table of age group
 
+```{r table1_age_group}
+
+table1.3 <- ddply(fullAQI_4_14, 
+                    c("age_group"), summarise,
+                    N = length(ond),
+                    Percent_n= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+kable(table1.3, col.names = c("Age Group",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron"), 
+      digits = 2)
 ```
+
+## Table of anesthesia type
+
+```{r table1_anes_type}
+table1.4 <- ddply(fullAQI_4_14, 
+                    c("anes_type"), summarise,
+                    N = length(ond),
+                    Percent_n= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+kable(table1.4, col.names = c("Anesthesia Typ",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron"), 
+      digits = 2)
+```
+
+## Table of ASA status
+
+```{r table1_ASA}
+table1.5 <- ddply(fullAQI_4_14, 
+                    c("ASA"), summarise,
+                    N = length(ond),
+                    Percent_n= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+kable(table1.5, col.names = c("ASA Status",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron"), 
+      digits = 2)
+```
+
+
+## Table of insurance status
+
+```{r table1_pay}
+table1.6 <- ddply(fullAQI_4_14, 
+                    c("pay"), summarise,
+                    N = length(ond),
+                    Percent_n= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+kable(table1.6, col.names = c("Insurance Typ",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron"), 
+      digits = 2)
+```
+
+# Table 2
+
+
+```{r odds_ratio_calculation}
+## Function to calculate OR
+
+calculate_OR <- function(mytable) {
+  #function to calculate the odds ratios 
+  # with the top line the reference odds in a one column table
+  Odds_table <- select(mytable, odds_Antiemetic)
+  ORtable <- rep(1,dim(Odds_table)[1])
+  for (i in 2: (dim(Odds_table)[1]))  {
+   ORtable[i] <- Odds_table[i,]/ Odds_table[1,] 
+  }
+  return(as.data.frame(ORtable))
+}
+
+# calculate_OR(table2.1)
+# new<- bind_cols(table2, calculate_OR(table2))
+```
+
+## Antiemetics by insurance type
+
+```{r odds_ratio1}
+table2.1 <- ddply(fullAQI_4_14, 
+                    c("pay"), summarise,
+                    N = length(ond),
+                    Percent= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+
+tableOR2.1 <- bind_cols(table2.1, calculate_OR(table2.1))
+
+kable(tableOR2.1, col.names = c("Insurance Typ",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron",
+                              "Odds Ratio"), 
+      digits = 2)
+```
+
+
+
+## Stratificaton 
+
+### Gender
+
+```{r odds_ratio2_female}
+Stratification <-filter(fullAQI_4_14, sex=="female")
+
+table2.2 <- ddply(Stratification, 
+                    c("pay"), summarise,
+                    N = length(ond),
+                    Percent= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+
+tableOR2.2 <- bind_cols(table2.2, calculate_OR(table2.2))
+
+
+kable(tableOR2.2, col.names = c("Insurance Typ",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron",
+                              "Odds Ratio"), 
+      digits = 2, caption = "Stratified by gender/female")
+```
+
+
+```{r odds_ratio2_male}
+Stratification <-filter(fullAQI_4_14, sex=="male")
+
+table2.3 <- ddply(Stratification, 
+                    c("pay"), summarise,
+                    N = length(ond),
+                    Percent= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+
+tableOR2.3 <- bind_cols(table2.3, calculate_OR(table2.3))
+
+
+kable(tableOR2.3, col.names = c("Insurance Typ",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron",
+                              "Odds Ratio"), 
+      digits = 2, caption = "Stratified by gender/male")
+```
+
+### Anesthesia Type
+
+```{r odds_ratio3_general}
+Stratification <-filter(fullAQI_4_14, anes_type=="General")
+
+table2.2 <- ddply(Stratification, 
+                    c("pay"), summarise,
+                    N = length(ond),
+                    Percent= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+
+tableOR2.2 <- bind_cols(table2.2, calculate_OR(table2.2))
+
+
+kable(tableOR2.2, col.names = c("Insurance Typ",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron",
+                              "Odds Ratio"), 
+      digits = 2, caption = "Stratified by anes_type/general")
+```
+
+
+```{r odds_ratio2_neuroax}
+Stratification <-filter(fullAQI_4_14, anes_type=="Neuroaxial")
+
+table2.3 <- ddply(Stratification, 
+                    c("pay"), summarise,
+                    N = length(ond),
+                    Percent= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+
+tableOR2.3 <- bind_cols(table2.3, calculate_OR(table2.3))
+
+
+kable(tableOR2.3, col.names = c("Insurance Typ",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron",
+                              "Odds Ratio"), 
+      digits = 2, caption = "Stratified by anes_type/neuroaxial")
+```
+
+```{r odds_ratio3_regional}
+Stratification <-filter(fullAQI_4_14, anes_type=="Regional")
+
+table2.2 <- ddply(Stratification, 
+                    c("pay"), summarise,
+                    N = length(ond),
+                    Percent= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+
+tableOR2.2 <- bind_cols(table2.2, calculate_OR(table2.2))
+
+
+kable(tableOR2.2, col.names = c("Insurance Typ",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron",
+                              "Odds Ratio"), 
+      digits = 2, caption = "Stratified by anes_type/regional")
+```
+
+
+```{r odds_ratio2_MAC}
+Stratification <-filter(fullAQI_4_14, anes_type=="MAC")
+
+table2.3 <- ddply(Stratification, 
+                    c("pay"), summarise,
+                    N = length(ond),
+                    Percent= N/dim(fullAQI_4_14)[1],
+                    Ond = sum(ond=="Ondan"),
+                    p_Antiemetic = sum(ond=="Ondan")/length(ond),
+                    odds_Antiemetic = sum(ond=="Ondan")/sum(ond=="no Ondan")
+                    )
+
+tableOR2.3 <- bind_cols(table2.3, calculate_OR(table2.3))
+
+
+kable(tableOR2.3, col.names = c("Insurance Typ",
+                              "Cases",
+                              "% Population",
+                              "Ondansetron",
+                              "% Ondansetron",
+                              "Odds for Ondansetron",
+                              "Odds Ratio"), 
+      digits = 2, caption = "Stratified by anes_type/MAC")
+```
+
+
